--- a/Angular_Frontend/src/app/app.component.html
+++ b/Angular_Frontend/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Witaj w {{title}}</h1>
+<app-navigation-bar></app-navigation-bar>
+
+<div class="container" style="margin-top: 110px;">
+    <h1>Witaj w {{title}}</h1>
+    <ul>
+        <li class="list-unstyled" *ngFor="let product of products">
+            {{product.name}}
+        </li>
+    </ul>
+</div>
