--- a/Angular_Frontend/src/app/app.component.html
+++ b/Angular_Frontend/src/app/app.component.html
@@ -1,10 +1,6 @@
 <app-navigation-bar></app-navigation-bar>
 
-<div class="container" style="margin-top: 110px;">
-    <h1>Witaj w {{title}}</h1>
-    <ul>
-        <li class="list-unstyled" *ngFor="let product of products">
-            {{product.name}}
-        </li>
-    </ul>
+<div class="container" style="margin-top: 95px;">
+    <app-shop></app-shop>
+    
 </div>
