--- a/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
@@ -1,16 +1,16 @@
-<header class="navbar fixed-top col-12 d-flex flex-row justify-content-center py-2 mb-4 border-bottom bg-dark align-items-center">
+<header class="navbar fixed-top col-12 d-flex flex-row justify-content-center ps-lg-5 py-2 mb-4 border-bottom bg-dark align-items-center">
 
     <img src="/assets/images/logo5.png" alt="logo" style="max-height: 60px;">
 
     <nav class="mx-lg-5 fs-5 text-uppercase">
-        <a class="p-3 text-white text-decoration-none" href="#">Strona Główna</a>
+        <!-- <a class="p-3 text-white text-decoration-none" href="#">Strona Główna</a> -->
         <a class="p-3 text-white text-decoration-none" href="#">Sklep</a>
         <a class="p-3 text-white text-decoration-none" href="#">Kontakt</a>
     </nav>
-
-    <form class="me-lg-5 " role="search">
-        <input type="search" class=" form-control" placeholder="Wyszukaj...">
-    </form>
+    <!-- (keyup.enter)="passSearching()" -->
+    <div class="me-lg-5 search" >
+        <input  type="search" class=" form-control" placeholder="Wyszukaj..." #searching  (input)="newInput()">
+    </div>
 
     <div class="d-flex align-items-center ">
         <a class="position-relative">
