--- a/Angular_Frontend/src/styles.scss
+++ b/Angular_Frontend/src/styles.scss
@@ -6,4 +6,7 @@
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 
-@import "node_modules/font-awesome/css/font-awesome.min.css"
+@import "node_modules/font-awesome/css/font-awesome.min.css";
+
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
