Chyba działa, gitignore product images

--- a/Angular_Frontend/src/app/shared/pagination/pagination.component.html
+++ b/Angular_Frontend/src/app/shared/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <pagination class="custom-pagination" *ngIf="pageSize && objectCount"
-    [itemsPerPage]="pageSize" [totalItems]="objectCount" [maxSize]="5" 
+    [itemsPerPage]="pageSize" [totalItems]="objectCount" [maxSize]="5" [(ngModel)]="pageNumber"
     previousText="POPRZEDNIA" nextText="NASTĘPNA" (pageChanged)="onPageClickedEmit($event)"
 >
 
