--- a/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,11 @@
 <header class="navbar fixed-top col-12 d-flex flex-row justify-content-center ps-lg-5 py-2 mb-4 border-bottom bg-dark align-items-center">
 
-    <img src="/assets/images/logo5.png" alt="logo" style="max-height: 60px;">
+    <img class="logo" src="/assets/images/logo5.png" alt="logo" style="max-height: 60px;" routerLink="/">
 
     <nav class="mx-lg-5 fs-5 text-uppercase">
-        <!-- <a class="p-3 text-white text-decoration-none" href="#">Strona Główna</a> -->
-        <a class="p-3 text-white text-decoration-none" href="#">Sklep</a>
-        <a class="p-3 text-white text-decoration-none" href="#">Kontakt</a>
+        <a class="link p-3 " routerLink="/" [routerLinkActiveOptions]="{exact: true} " routerLinkActive="active">Strona Główna</a>
+        <a class="link p-3 " routerLink="/sklep" routerLinkActive="active">Sklep</a>
+        <a class="link p-3 " routerLink="/kontakt" routerLinkActive="active">Kontakt</a>
     </nav>
     <!-- (keyup.enter)="passSearching()" -->
     <div class="me-lg-5 search" >
@@ -18,6 +18,6 @@
             <div class="product-number">5</div>
         </a>
         <a href="" class="btn btn-outline-light me-2">Zaloguj</a>
-        <a href="" class="btn btn-warning">Utwórz konto</a>
+        <a href="" class="color btn">Utwórz konto</a>
     </div>
 </header>
