Chyba ogarnięta glowna, kontakt, breadcrumb, itp

--- a/Angular_Frontend/src/app/contact/contact.component.html
+++ b/Angular_Frontend/src/app/contact/contact.component.html
@@ -1,1 +1,16 @@
-<p>contact works!</p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-4">
+
+      <h2 class="text-center mb-3">Informacje kontaktowe</h2>
+      <ul class="list-group" style="font-size: 1.2em;">
+        <li class="list-group-item ps-4">Telefon - 1234 4567 7890</li>
+        <li class="list-group-item ps-4">Adres email - {{email}}</li>
+        <li class="list-group-item ps-4">Addres sklepu - Łazienkowska 12 Warszawa, Polska</li>
+        <li class="list-group-item ps-4">Godziny otwarcia - Pon-pt : 8-16</li>
+      </ul>
+    </div>
+
+  </div>
+</div>
+
