--- a/Angular_Frontend/src/app/core/error-internal-server/error-internal-server.component.html
+++ b/Angular_Frontend/src/app/core/error-internal-server/error-internal-server.component.html
@@ -1,5 +1,5 @@
 <ng-container class="mt-4">
-    <h2 class="text-uppercase pom">Błąd wewnętrzy servera !</h2>
+    <h2 class="text-uppercase pom pt-2">Błąd wewnętrzy servera !</h2>
 
     <ng-container *ngIf="blad" class="pom">
         <h3>Błąd : {{blad}}</h3>
