--- a/Angular_Frontend/src/app/home/home.component.html
+++ b/Angular_Frontend/src/app/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<div>
+
+    <carousel [isAnimated]="true" class="karuzela">
+
+      <slide>
+        <img src="assets/images/glowna1.jpg" style="width: 100%; display: block;">
+      </slide>
+
+      <slide>
+        <img src="assets/images/glowna2.jpg" style="width: 100%; display: block;">
+      </slide>
+
+      <slide>
+        <img src="assets/images/glowna3.jpg" style="width: 100%; display: block;">
+      </slide>
+
+    </carousel>
+  
+    <h1>Witaj w BACKCOUNTRYGEAR !</h1>
+
+  </div>
+  
