--- a/Angular_Frontend/src/app/shop/product-info/product-info.component.html
+++ b/Angular_Frontend/src/app/shop/product-info/product-info.component.html
@@ -1,7 +1,7 @@
 <div class="row pt-4" *ngIf="product">
 
-    <div class="col-7">
-        <img src="{{product.imageAdress}}" alt="{{product.name}}" class="img-fluid" style="border-radius: 3%; max-width: 110;">
+    <div class="container col-7" style="width: 42%; margin-right: 0%;">
+        <img src="{{product.imageAdress}}" alt="{{product.name}}" class="img-fluid" style="border-radius: 3%; ">
     </div>
 
     <div class="col-5 ps-5 pt-4 align-items-center">
