--- a/Angular_Frontend/src/styles.scss
+++ b/Angular_Frontend/src/styles.scss
@@ -10,3 +10,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @import "./node_modules/bootstrap/scss/bootstrap";
+
+label.xng-breadcrumb-trail{
+    color: #3FBC84;
+    font-weight: bold;
+}
