--- a/Angular_Frontend/src/app/app.component.html
+++ b/Angular_Frontend/src/app/app.component.html
@@ -1,6 +1,10 @@
 <app-navigation-bar></app-navigation-bar>
 
-<div class="container" style="margin-top: 95px;">
-    <!-- <app-shop></app-shop> -->
-    <router-outlet></router-outlet>
-</div>
+<ngx-spinner type="ball-clip-rotate">
+    <h2 class="text-white">Ładowanie ...</h2>
+</ngx-spinner>
+
+<app-header></app-header>
+
+<!-- <app-shop></app-shop> -->
+<router-outlet></router-outlet>
