--- a/Angular_Frontend/src/app/core/error-not-found/error-not-found.component.html
+++ b/Angular_Frontend/src/app/core/error-not-found/error-not-found.component.html
@@ -1,3 +1,3 @@
 <ng-container class="mt-4">
-    <h1 class="text-uppercase pom">Nie znaleziono !</h1>
+    <h1 class="text-uppercase pom pt-2">Nie znaleziono !</h1>
 </ng-container>
