Przd final. Koszyk, dodawanie, usuwanie, bug-fixes

--- a/Angular_Frontend/src/app/contact/contact.component.html
+++ b/Angular_Frontend/src/app/contact/contact.component.html
@@ -1,8 +1,8 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 90px;">
   <div class="row justify-content-center">
-    <div class="col-lg-4">
+    <div class="col-lg-5">
 
-      <h2 class="text-center mb-3">Informacje kontaktowe</h2>
+      <h2 class="text-center mb-4">Informacje kontaktowe</h2>
       <ul class="list-group" style="font-size: 1.2em;">
         <li class="list-group-item ps-4">Telefon - 1234 4567 7890</li>
         <li class="list-group-item ps-4">Adres email - {{email}}</li>
