--- a/Angular_Frontend/src/app/core/error-internal-server/error-internal-server.component.html
+++ b/Angular_Frontend/src/app/core/error-internal-server/error-internal-server.component.html
@@ -1,7 +1,9 @@
-<ng-container class="mt-4">
-    <h2 class="text-uppercase pom pt-2">Błąd wewnętrzy servera !</h2>
+<div class="mt-4 col-7 mx-auto">
+    <h2 class="text-uppercase pom pt-2">Błąd wewnętrzny serwera!</h2>
 
     <ng-container *ngIf="blad" class="pom">
-        <h3>Błąd : {{blad}}</h3>
+        Błąd: {{ blad }}
     </ng-container>
-</ng-container>
+</div>
+
+
