--- a/Angular_Frontend/src/app/home/home.component.html
+++ b/Angular_Frontend/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
 
-    <carousel [isAnimated]="true" class="karuzela">
+    <carousel [interval]="4000" [isAnimated]="true" class="karuzela">
 
       <slide>
         <img src="assets/images/glowna1.jpg" style="width: 100%; display: block;">
@@ -16,7 +16,7 @@
 
     </carousel>
   
-    <h1>Witaj w BACKCOUNTRYGEAR !</h1>
+    <h1>Witaj w BACKCOUNTRY GEAR !</h1>
 
   </div>
   
