--- a/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar fixed-top col-12 d-flex flex-row justify-content-center ps-lg-5 py-2 mb-4 border-bottom bg-dark align-items-center">
+<header class="navbar fixed-top col-12 d-flex flex-row justify-content-center ps-lg-5 py-2 mb-4 bg-dark align-items-center">
 
     <img class="logo" src="/assets/images/logo5.png" alt="logo" style="max-height: 60px;" routerLink="/">
 
@@ -8,14 +8,16 @@
         <a class="link p-3 " routerLink="/kontakt" routerLinkActive="active">Kontakt</a>
     </nav>
     
-    <div class="me-lg-5 ">
+    <div class="me-lg-5">
         <input  type="search" class=" form-control me-5" style="width: 140px;" placeholder="Wyszukaj..." #searching  (keyup.enter)="newInput()" (search)="resetInput()">
     </div>
 
-    <div class="d-flex align-items-center ">
-        <a class="position-relative">
+    <div class="d-flex align-items-center">
+        <a class="position-relative" style="cursor: pointer;" routerLink="/koszyk">
             <i class="cart fa fa-shopping-cart fa-4x me-5"></i>
-            <div class="product-number">5</div>
+            <div class="product-number" *ngIf="(cartService.cartSource$ | async) as cart">
+                {{countNumberOfProducts(cart.items)}}
+            </div>
         </a>
         <a href="" class="btn btn-outline-light me-2">Zaloguj</a>
         <a href="" class="color btn">Utwórz konto</a>
