--- a/Angular_Frontend/src/app/shop/product-info/product-info.component.html
+++ b/Angular_Frontend/src/app/shop/product-info/product-info.component.html
@@ -1,50 +1,55 @@
-<div class="row pt-4" *ngIf="product">
+<div class="container">
+    <div class="d-flex pt-5" *ngIf="product">
 
-    <div class="container col-7" style="width: 42%; margin-right: 0%;">
-        <img src="{{product.imageAdress}}" alt="{{product.name}}" class="img-fluid" style="border-radius: 3%; ">
-    </div>
-
-    <div class="col-5 ps-5 pt-4 align-items-center">
-
-        <h1 class=" " style="font-weight: bold;">{{product.name}}</h1>
-
-        <p class="mt-3 mb-1 ps-1" style="font-size: 2em;">{{ product.cost | number }} zł</p>
-
-        <div class="d-flex justify-content-start align-items-center">
-
-            <input type="number" class="form-control fs-4 pb-2" value="1" min="1" max="9" style="width: 60px; height: 50px;">
-            
-            <button class="colorPom d-flex btn btn-outline-secondary justify-content-center ms-2">
-                <i class="fa fa-solid fa-cart-plus fa-2x me-3"></i>
-                <h5 class="pt-1 text-uppercase">Do koszyka</h5>
-            </button>
-
+        <div class="col-7 offset-1" style="width: 55%; margin-right: 0%;">
+            <img src="{{product.imageAdress}}" alt="{{product.name}}" class="img-fluid" style="border-radius: 3%; ">
         </div>
-
-        <div class="row mt-3">
-
-            <h3>Opis produktu:</h3>
-            <span class="fs-5">
-                {{product.description}}
-            </span>
-
-        </div>
-
-        <div class="row mt-3">
-            <span class="fs-4">
-                Kategoria: 
-                <span class="colorZiel textBold">
-                    {{product.categoryName}}
+    
+        <div class="col-5 ps-5 pt-4 align-items-center">
+    
+            <h1 class=" " style="font-weight: bold;">{{product.name}}</h1>
+    
+            <p class="mt-3 mb-1 ps-1" style="font-size: 2em;">{{ product.cost | number }} zł</p>
+    
+            <div class="d-flex justify-content-start align-items-center">
+    
+                <input type="number" class="form-control fs-4 pb-2 text-center" value =1 min="1" max="99" 
+                style="width: 70px; height: 50px;" #numberP>
+                
+                <button class="colorPom d-flex btn btn-outline-secondary justify-content-center ms-2" 
+                style="width: 200px;" #numberP (click)="addProduct(product, numberP.value)"
+                >
+                    <i class="fa fa-solid fa-cart-plus fa-2x me-3"></i>
+                    <h5 class="pt-1 text-uppercase">Do koszyka</h5>
+                </button>
+    
+            </div>
+    
+            <div class="row mt-3">
+    
+                <h3>Opis produktu:</h3>
+                <span class="fs-5">
+                    {{product.description}}
                 </span>
-            </span>
-
-            <span class="fs-4">
-                Marka: 
-                <span class="colorZiel textBold">
-                    {{product.companyName}}
+    
+            </div>
+    
+            <div class="row mt-3">
+                <span class="fs-4">
+                    Kategoria: 
+                    <span class="colorZiel textBold">
+                        {{product.categoryName}}
+                    </span>
                 </span>
-            </span>
+    
+                <span class="fs-4">
+                    Marka: 
+                    <span class="colorZiel textBold">
+                        {{product.companyName}}
+                    </span>
+                </span>
+            </div>
+    
         </div>
-
     </div>
 </div>
