--- a/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/Angular_Frontend/src/app/core/navigation-bar/navigation-bar.component.html
@@ -3,23 +3,57 @@
     <img class="logo" src="/assets/images/logo5.png" alt="logo" style="max-height: 60px;" routerLink="/">
 
     <nav class="mx-lg-5 fs-5 text-uppercase">
-        <a class="link p-3 " routerLink="/" [routerLinkActiveOptions]="{exact: true} " routerLinkActive="active">Strona Główna</a>
-        <a class="link p-3 " routerLink="/sklep" routerLinkActive="active">Sklep</a>
-        <a class="link p-3 " routerLink="/kontakt" routerLinkActive="active">Kontakt</a>
+        <a class="link p-3 a1" routerLink="/" [routerLinkActiveOptions]="{exact: true} " routerLinkActive="active">Strona Główna</a>
+        <a class="link p-3 a1" routerLink="/sklep" routerLinkActive="active">Sklep</a>
+        <a class="link p-3 a1" routerLink="/kontakt" routerLinkActive="active">Kontakt</a>
     </nav>
     
-    <div class="me-lg-5">
+    <div>
         <input  type="search" class=" form-control me-5" style="width: 140px;" placeholder="Wyszukaj..." #searching  (keyup.enter)="newInput()" (search)="resetInput()">
     </div>
 
     <div class="d-flex align-items-center">
-        <a class="position-relative" style="cursor: pointer;" routerLink="/koszyk">
+        <a class="position-relative a1 " style="cursor: pointer;" routerLink="/koszyk">
             <i class="cart fa fa-shopping-cart fa-4x me-5"></i>
             <div class="product-number" *ngIf="(cartService.cartSource$ | async) as cart">
                 {{countNumberOfProducts(cart.items)}}
             </div>
         </a>
-        <a href="" class="btn btn-outline-light me-2">Zaloguj</a>
-        <a href="" class="color btn">Utwórz konto</a>
+        
+        <ng-container *ngIf="(acService.loggedUserSource$ | async) === null">
+            <a href="" class="btn btn-outline-light me-2" routerLink="/konto/logowanie" >Zaloguj</a>
+            <a href="" class="color btn" routerLink="/konto/rejestracja">Utwórz konto</a>
+
+        </ng-container>
+
+        <ng-container *ngIf="(acService.loggedUserSource$ | async) as loggedUser">
+            <div class="dropdown ps-2" style="cursor: pointer;" dropdown container="body">
+
+                <button dropdownToggle class="b1 dropdown-toggle">
+                    <span class="fs-5">Moje konto </span>
+                </button>
+
+                <ul *dropdownMenu class="dropdown-menu">
+
+                    <h6 class="hh6 text-center align-middle p-2 justify-content-top">{{loggedUser.emailAddress}}</h6>
+                    
+                    <li>
+                        <a class="dropdown-item text-center" routerLink="/zamowienia">
+                            Moje zamówienia
+                        </a>
+                    </li>
+
+                    <div class="dropdown-divider "></div>
+
+                    <li>
+                        <a class="dropdown-item text-center" (click)="acService.logOut()" style="cursor: pointer;">
+                            Wyloguj
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+        </ng-container>
+
     </div>
 </header>
