--- a/Angular_Frontend/src/app/cart/cart.component.html
+++ b/Angular_Frontend/src/app/cart/cart.component.html
@@ -78,7 +78,7 @@
                                 </td>
 
                                 <td class="text-center suma am">
-                                    {{item.productNumber * item.cost | number}} zł
+                                    {{(item.productNumber * item.cost).toFixed(2)}} zł
                                 </td>
 
                                 <td class="am">
